--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,19 +48,20 @@
             tools:itemCount="5"
             tools:listitem="@layout/song_card" />
 
+        <!-- ****** MODIFIED SECTION: Artists ****** -->
         <TextView
-            android:id="@+id/header_genres"
+            android:id="@+id/header_artists"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
-            android:text="Genres"
+            android:text="Artists"
             android:textSize="34sp"
             android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/genres_recycler_view"
+            android:id="@+id/artists_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
@@ -69,8 +70,8 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:itemCount="3"
-            tools:listitem="@layout/genre_card" />
+            tools:itemCount="6"
+            tools:listitem="@layout/artist_card" />
 
         <TextView
             android:id="@+id/header_recommended"
